<resources>
    <string name="app_name">Privexec</string>
    <string name="forgot_password">Forgot Password? </string>
    <string name="privacy">Privacy Policy</string>
    <!--Login Register-->
    <string name="emial">Email</string>
    <string name="password">Password</string>
    <string name="c_password">Confirm Password</string>
    <string name="old_psd">Old Password</string>

    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="signin">Sign In</string>
    <string name="name">User name</string>
    <string name="number">Phone Number</string>
    <string name="dob">Date Of Birth</string>
    <string name="choose_dob">Choose Date Of Birth</string>
    <string name="choose_country">choose_country</string>

    <string name="already_have_a_account">Already have an Account ?</string>
    <string name="validation_uname">Please Enter Name</string>
    <string name="validation_emial">Please Enter Valid Email</string>
    <string name="validation_mobile">Please Enter Valid Mobile Number</string>
    <string name="validation_password">You must have 6 characters in your password</string>
    <string name="validation_cPassword">Your Password is not match</string>
    <string name="password_not_confirmed">Password is not Confirmed</string>

    <string name="update_profile">Update Profile</string>
    <string name="profile_updated_successfully">Profile updated successfully</string>

    <string name="internet_connection">Please check intenet connection</string>
    <!--Home PAge-->
    <string name="menu">Menu</string>
    <string name="myapps">My Apps</string>
    <string name="reports">Reports</string>
    <string name="ratings">Ratings</string>
    <string name="prefrence">Preferences</string>
    <string name="tutorial">Tutorial</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--MYAPP fragmnet-->
    <string name="myapp">My Apps</string>
    <!--introducation-->
    <string name="introducation">Introducing</string>
    <string name="faq">+   FAQ</string>
    <string name="faq_">FAQ</string>
    <string name="resources_">RESOURCES</string>
    <string name="resources">+   RESOURCES</string>
    <string name="about">ABOUT</string>
    <string name="about_">+   About</string>
    <string name="contact_">+   CONTACT Us</string>
    <string name="contact">CONTACT Us</string>
    <string name="continue_">Continue</string>


    <!--DSAR-->
    <string name="dsar">DSR Request</string>
    <string name="name_of_the_person">What Is the Name of the person making the subject acess request ?</string>
    <string name="email_of_the_person">What is the email address of the person making the subject accesss request
        ?(optional)
    </string>
    <string name="address_of_the_person">What is the address of the person who is making the subject acess request ?
    </string>
    <string name="number_of_the_person">What is the telephone number of the person making the subject access request
        ?
    </string>
    <string name="date_of_the_person">What is the date the letter will be sent ?</string>

    <string name="what_is_organisation">What Is the Name of the organisation to which the subject access request will be
        made ?
    </string>

    <string name="crea_tetemplat">Create E-mail Template</string>
    <string name="before_you">Before you continue creating and send the email, please check with this company has to say
        about your privacy
    </string>

    <string name="what_address_organisation">What Is the address of the organisation to which the subject access request
        is being sent ?
    </string>

    <string name="service_provider">I feel there is a fair trade between the amount of data I shared with this company and the services they provided.
    </string>

    <string name="data_subject">Data Subject Acess Request</string>

    <!--Prefer-->
    <string name="feedback">Feedback</string>
    <string name="pushapp">Push Active Apps</string>
    <string name="country">Country</string>
    <string name="unitedstates">United States</string>
    <string name="sixmonth">Notify me which Apps have
not been used for more than
</string>
    <string name="savedsar">Auto save DSAR email</string>
    <string name="changepassword">Change password every </string>
    <string name="enabletouchid">Enable Touch ID</string>

    <!--Privacy rating-->

    <string name="privacyrating">Privacy Rating</string>
    <!--Ratingreview-->

    <string name="ratingreview">Rating &amp; Reviews :</string>
    <string name="appreview">App Reviews :</string>
    <string name="no_reviews">No Reviews</string>

    <!--Sendrating-->
    <string name="rate_and_review">Rate and review your app :</string>
    <string name="collect_form_me">It’s clear to understand from their privacy policy the amount of data they collect from me.
    </string>
    <string name="communication_ornewsletter">It’s easy to unsubscribe from any of their promotional communication or newsletters.
    </string>
    <string name="collect_me">It\'s clear to understand from the privacy policy of the amount of data they collect from
        me
    </string>
    <string name="your_experience">Write a review so others can benefits from your experience :</string>
    <string name="premission_messag">Pdf file auto save</string>
    <string name="text_fingerprint">Touch the fingerprint sensor</string>
    <string name="message_success">Fingerprint matches the one registered in your phone\'s settings</string>
    <string name="error_override_hw_unavailable">You don\'t have any suited hardware for using the fingerprint</string>
    <string name="text_show_dialog">show fingerprint dialog</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="username">User Name</string>
    <string name="menu_home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="changePassword">Change Password</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="cancel">Cancel</string>
    <string name="trend_app_active_vs_pii_shared">Trend: App Active vs Pii Shared</string>
    <string name="pii_shared_by_app">PII Shared by App</string>
    <string name="type_of_pii_shared">Type of PII Shared</string>
    <string name="total_apps_installed">Total Apps Installed</string>


    <!-- - - - - - - - - - - - - - - - - - - - - <<<<<>>>>>>>>>>>>>>>>>>>>>>>>>>- - - - - - -                    -->

    <string name="open_app_usage_setting">Open Apps with usage access settings</string>
    <string name="last_time_used">"Last time used: "</string>
    <string name="time_span">"Time span: "</string>
    <string name="want_to_logout">Are you sure you want to logout?</string>
    <string name="want_to_delete_app">Are you sure, you want to delete this application?</string>
    <string name="display_order_text">Sort by:</string>
    <string name="app_name_label">App</string>
    <string name="last_time_used_label">Last time used</string>
    <!-- label for usage time -->
    <string name="usage_time_label">Usage time</string>


    <string name="notification_channel_id">com.privexec</string>


</resources>
