<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--<group android:checkableBehavior="single">-->
        <item
            android:id="@+id/nav_home"
            android:visible="false"
            android:title="@string/menu_home" />
    <item
            android:id="@+id/myProfile"
            android:title="@string/my_profile" />
    <item
            android:id="@+id/changePassword"
            android:title="@string/changePassword" />
    <item
            android:id="@+id/privacyPolicy"
            android:title="@string/privacy_policy" />
    <item
            android:id="@+id/settings"
            android:visible="false"
            android:title="@string/settings" />
    <item
            android:id="@+id/logout"
            android:title="@string/logout" />

    <!--
    <group android:id="@+id/grp1">

    </group>
    <group android:id="@+id/grp2">

    </group>
    <group android:id="@+id/grp3">
    </group>
    <group android:id="@+id/grp4">
    </group>
    <group android:id="@+id/grp5">
    </group>
-->

</menu>
