<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".views.activity.LoginActivity">

    <data>
        <variable
                name="user"
                type="com.privexec.viewmodel.LoginVM" />
    </data>
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_color">

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/tootbar"
                    android:orientation="vertical">
                <!--        android:weightSum="1"-->
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">
                    <!-- android:layout_weight=".3"
                                 -->
                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_150sdp"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/_20sdp"
                            android:padding="@dimen/_20sdp"
                            android:src="@drawable/logo_p" />
                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".7"
                        android:orientation="vertical">
                    <!--
                      android:text="12345678"-->

                    <androidx.core.widget.NestedScrollView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/liftright"
                                android:layout_marginRight="@dimen/liftright"
                                android:orientation="vertical">

                            <EditText
                                    android:id="@+id/l_email"
                                    style="@style/StyleEdittext"
                                    android:drawableLeft="@drawable/mail"
                                    android:drawablePadding="@dimen/_10sdp"
                                    android:drawableTint="@color/white"
                                    android:hint="@string/emial"
                                    android:inputType="textEmailAddress"
                                    android:textColor="@color/white"
                                    android:textColorHint="@color/grey_white"
                                  />
                            <!--   android:text="demso123@mailinator.com"
                              -->

                            <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/_1sdp"
                                    android:background="@color/white" />

                            <EditText
                                    android:id="@+id/l_password"
                                    style="@style/StyleEdittext"
                                    android:layout_marginTop="@dimen/margintop_edittext"
                                    android:drawableLeft="@drawable/lock"
                                    android:drawablePadding="@dimen/_10sdp"
                                    android:drawableTint="@color/white"
                                    android:hint="@string/password"
                                    android:inputType="textPassword"
                                    android:textColor="@color/white"
                                  android:textColorHint="@color/grey_white" />
                            <!--    android:text="12345678"
                            -->
                            <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/_1sdp"
                                    android:background="@color/white" />
                            <TextView
                                    android:id="@+id/forgotPassword"
                                    android:layout_width="wrap_content"
                                    android:layout_height="45dp"
                                    android:layout_gravity="right"
                                    android:gravity="right|center"
                                    android:text="@string/forgot_password"
                                    android:textColor="@color/white"
                                    android:textSize="12dp" />

                            <Button
                                    android:id="@+id/login"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/button_background"
                                    android:text="@string/signin"
                                    android:textAllCaps="false"
                                    android:textColor="@color/dark_blue_button_color" />

                            <Button
                                    android:id="@+id/signup"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/margintop_edittext"
                                    android:background="@drawable/button_border"
                                    android:backgroundTint="@color/greySignIn"
                                    android:text="@string/signup"
                                    android:textAllCaps="false"
                                    android:textColor="@color/white" />

                            <TextView
                                    android:id="@+id/privacyPolicy"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginTop="@dimen/_15sdp"
                                    android:gravity="center"
                                    android:text="@string/privacy"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/_14sdp" />
                        </LinearLayout>
                    </androidx.core.widget.NestedScrollView>
      </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <include layout="@layout/bottom_banner" />

    </FrameLayout>
</layout>