<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".views.fragment.ChangePasswordFrag">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
        <LinearLayout
                android:id="@+id/ll_fragChangePsd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:clickable="true"
                android:background="@color/white">
            <include
                    layout="@layout/header"
                    />
<LinearLayout
        android:layout_width="match_parent"
android:orientation="vertical"
        android:layout_height="match_parent"
  android:layout_margin="@dimen/_20sdp"  >
    <EditText
                     android:layout_marginTop="20dp"
                    android:id="@+id/et_oldPsd"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edittext_hight"
                    android:drawableLeft="@drawable/lock"
                    android:hint="@string/old_psd"
                    android:backgroundTint="@color/grey"
                    android:inputType="textPassword"
                    android:textColor="@color/dark_blue_button_color"
                    android:layout_margin="@dimen/_10sdp"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:textColorHint="@color/background_color"
                    android:drawableTint="@color/background_color"
                    android:background="@drawable/background_inputfiled"
                    android:drawablePadding="@dimen/_20sdp"/>
    <EditText
                       android:layout_marginTop="20dp"
                    android:id="@+id/etnewPsd"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edittext_hight"
                    android:drawableLeft="@drawable/lock"
                    android:hint="@string/password"
                    android:backgroundTint="@color/grey"
                    android:inputType="textPassword"
                    android:textColor="@color/dark_blue_button_color"
                    android:layout_margin="@dimen/_10sdp"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:textColorHint="@color/background_color"
                    android:drawableTint="@color/background_color"
                    android:background="@drawable/background_inputfiled"
                    android:drawablePadding="@dimen/_20sdp"/>
    <EditText
                      android:layout_marginTop="20dp"
                    android:id="@+id/etConfirmPsd"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edittext_hight"
                    android:drawableLeft="@drawable/lock"
                    android:hint="@string/c_password"
                    android:maxLength="11"
                    android:inputType="textPassword"
                    android:backgroundTint="@color/grey"
                    android:textColor="@color/dark_blue_button_color"
                    android:layout_margin="@dimen/_10sdp"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:textColorHint="@color/background_color"
                    android:drawableTint="@color/background_color"
                    android:background="@drawable/background_inputfiled"
                    android:drawablePadding="@dimen/_20sdp"/>
    <Button
                    android:textSize="@dimen/_10sdp"
                    android:id="@+id/btn_changePsd"
                    style="@style/StyleEdittext"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:backgroundTint="@color/background_color"
                    android:layout_margin="@dimen/_15sdp"
                    android:gravity="center"
                    android:imeOptions="actionDone"
                    android:text="@string/changePassword"
                    android:textAllCaps="true"
                    android:layout_gravity="center"
                    android:textColor="@color/white" />
</LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>